<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.softarea.learningapp.ui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home"/>
    <fragment
        android:id="@+id/navigation_panel_add"
        android:name="com.softarea.learningapp.ui.PanelAddFragment"
        android:label="@string/title_panel_add"
        tools:layout="@layout/fragment_panel_add" />
    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.softarea.learningapp.ui.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />
    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.softarea.learningapp.ui.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_account"
        android:name="com.softarea.learningapp.ui.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/navigation_create_note"
        android:name="com.softarea.learningapp.ui.CreateNoteFragment"
        android:label="@string/title_create_note"
        tools:layout="@layout/fragment_create_note" />
    <fragment
        android:id="@+id/navigation_notes"
        android:name="com.softarea.learningapp.ui.NotesFragment"
        android:label="@string/title_notes"
        tools:layout="@layout/fragment_notes" />
    <fragment
        android:id="@+id/navigation_show_note"
        android:name="com.softarea.learningapp.ui.ShowNoteFragment"
        android:label="@string/title_show_note"
        tools:layout="@layout/fragment_show_note" />
</navigation>
